k8s/restaurant-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-depl
  namespace: food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
        - name: rest
          image: shyrock890/cloud-restaurant
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: rest-srv
  namespace: food
spec:
  selector:
    app: rest
  ports:
    - name: rest
      protocol: TCP
      port: 5001
      targetPort: 5001
