k8s/ingress-depl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: food-delivery-backend
  namespace: food

spec:
  rules:
    - host: food.dev

      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 80

          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 5000

          - path: /api/restaurant
            pathType: Prefix
            backend:
              service:
                name: rest-srv
                port:
                  number: 5001

          - path: /api/item
            pathType: Prefix
            backend:
              service:
                name: rest-srv
                port:
                  number: 5001

          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: rest-srv
                port:
                  number: 5001

          - path: /api/address
            pathType: Prefix
            backend:
              service:
                name: rest-srv
                port:
                  number: 5001

          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: rest-srv
                port:
                  number: 5001

          - path: /api/rider
            pathType: Prefix
            backend:
              service:
                name: rider-srv
                port:
                  number: 5005

          - path: /api/payment
            pathType: Prefix
            backend:
              service:
                name: payment-srv
                port:
                  number: 5002

          - path: /api/upload
            pathType: Prefix
            backend:
              service:
                name: payment-srv
                port:
                  number: 5002

          - path: /api/v1/internal
            pathType: Prefix
            backend:
              service:
                name: realtime-srv
                port:
                  number: 5004

          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: realtime-srv
                port:
                  number: 5004
